// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders inline Form with label correctly 1`] = `
<form
  class="ui-form ui-form-inline"
>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      class=""
    >
      类型
    </label>
    <div
      class="ui-form-item-control theme-default"
    >
      <span>
        <input
          class="ui-input"
          placeholder="请输入..."
          type="text"
        />
      </span>
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      class=""
    >
      来源
    </label>
    <div
      class="ui-form-item-control theme-default"
    >
      <span>
        <input
          class="ui-input"
          placeholder="请输入..."
          type="text"
        />
      </span>
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      class=""
    />
    <div
      class="ui-form-item-control theme-default"
    >
      <button
        class="ui-button theme-success"
        type="button"
      >
        查询
      </button>
    </div>
  </div>
</form>
`;

exports[`Form renders inline Form with required fields and help correctly 1`] = `
<form
  class="ui-form ui-form-inline"
>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      class=""
    >
      类型
    </label>
    <div
      class="ui-form-item-control ui-form-item-control-help theme-default"
    >
      <span>
        <input
          class="ui-input"
          placeholder="请输入..."
          type="text"
        />
      </span>
      <div
        class="ui-form-explain"
      >
        什么是类型
      </div>
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      class=""
    >
      <span
        class="ui-form-item-required"
      >
        <i
          class="ui-icon ui-icon-required theme-default"
        />
      </span>
      来源
    </label>
    <div
      class="ui-form-item-control theme-default"
    >
      <span>
        <input
          class="ui-input"
          placeholder="请输入..."
          type="text"
        />
      </span>
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      class=""
    />
    <div
      class="ui-form-item-control theme-default"
    >
      <button
        class="ui-button theme-success"
        type="button"
      >
        查询
      </button>
    </div>
  </div>
</form>
`;

exports[`Form renders normal Form correctly 1`] = `
<form
  class="ui-form ui-form-horizontal"
>
  <div
    class="ui-form-item"
  >
    <label
      class=""
    >
      账号
    </label>
    <div
      class="ui-form-item-control theme-default"
    >
      <span>
        <input
          class="ui-input"
          placeholder="请输入..."
          type="text"
        />
      </span>
    </div>
  </div>
  <div
    class="ui-form-item"
  >
    <label
      class=""
    >
      密码
    </label>
    <div
      class="ui-form-item-control theme-default"
    >
      <span>
        <input
          class="ui-input"
          placeholder="请输入..."
          type="text"
        />
      </span>
    </div>
  </div>
  <div
    class="ui-form-item"
  >
    <div
      class="ui-form-item-control theme-default"
    >
      <button
        class="ui-button theme-success"
        type="button"
      >
        登录
      </button>
    </div>
  </div>
</form>
`;
